Fix Android build: real MSAL 2.2.3 OAuth flow, restore MainActivity view IDs, add Firebase messaging deps