@@ -196,7 +196,7 @@ public class MsftLoginActivity extends BaseActivity {
     private void initializeMsalAndSignIn() {
         // Use a placeholder client ID - users must replace this with their own Azure AD app registration
         String clientId = "YOUR_CLIENT_ID_HERE";
-        String redirectUri = "msauth://" + getPackageName() + "/" + java.net.URLEncoder.encode("com.microsoft.identity.client.SignActivity", java.nio.charset.StandardCharsets.UTF_8.name());
+        String redirectUri = "msauth://" + getPackageName() + "/" + java.net.URLEncoder.encode("com.microsoft.identity.client.SignActivity", java.nio.charset.StandardCharsets.UTF_8);
         
         oauthManager = new MicrosoftOAuthManager(this);
         oauthManager.initialize(clientId, redirectUri);
@@ -224,7 +224,7 @@ public class MsftLoginActivity extends BaseActivity {
         // Initialize MSAL if not already done
         if (oauthManager == null) {
             String clientId = "YOUR_CLIENT_ID_HERE";
-            String redirectUri = "msauth://" + getPackageName() + "/" + java.net.URLEncoder.encode("com.microsoft.identity.client.SignActivity", java.nio.charset.StandardCharsets.UTF_8.name());
+            String redirectUri = "msauth://" + getPackageName() + "/" + java.net.URLEncoder.encode("com.microsoft.identity.client.SignActivity", java.nio.charset.StandardCharsets.UTF_8);
             oauthManager = new MicrosoftOAuthManager(this);
             oauthManager.initialize(clientId, redirectUri);
         }
